Moving from editable h1 to input tag that looks like h1

--- a/SearchApp/SearchApp/app/css/jemdoc.css
+++ b/SearchApp/SearchApp/app/css/jemdoc.css
@@ -82,6 +82,7 @@ div.menu-category {
 	padding-top: 0.2em;
 	padding-bottom: 0.1em;
 	font-weight: bold;
+    min-height: 1em;
 }
 
 div.menu-item {
