--- a/SearchApp/SearchApp/app/css/app.css
+++ b/SearchApp/SearchApp/app/css/app.css
@@ -19,12 +19,10 @@ body {
 
 /* Copy from jemdoc css for h1 */
 input.h1{
+    font-family: inherit;
     color: #527bbd;
-	margin-top: 0.7em;
-	margin-bottom: 0.3em;
-	padding-bottom: 0.2em;
 	line-height: 1.0;
 	padding-top: 0.5em;
-	border-bottom: 1px solid #aaaaaa;
+    border: none;
 	font-size: 165%;
 }
