--- a/PersonalPage_test/Page_Client/public/src/app/tpls/career.html
+++ b/PersonalPage_test/Page_Client/public/src/app/tpls/career.html
@@ -1,10 +1,6 @@
 <div>
-    This is a Career h laskdfh laksdj flaksdjh flaksjd hflasjdhflasdj hflaskdjhf laksdhf lksajdhflaskdhflasdjfhlsadj fhlaskdfhksdhj dskjh  Page!
+    This is a Career Page
 </div>
 <div>
-    <textarea name="message" style="width: 100%; height: 150px;"
-        onfocus="if(this.value==this.defaultValue)this.value='';"
-        onblur="if(this.value=='')this.value=this.defaultValue;">
-Click to add text
-    </textarea>
+
 </div>
