--- a/SPAHomePage/app/css/bootstrap.css
+++ b/SPAHomePage/app/css/bootstrap.css
@@ -152,8 +152,8 @@ textarea {
 }
 
 body {
-  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-  font-size: 13px;
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px; */
   line-height: 18px;
   color: #333333;
   background-color: #ffffff;
