--- a/SPAHomePage/app/css/style.css
+++ b/SPAHomePage/app/css/style.css
@@ -1,7 +1,8 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    max-width:1280px;
+    margin: 0 auto;
 }
-a {
-  color: #00b7ff;
+
+#menu-editor-options {
+    margin-top: 20px;
 }
