--- a/SPAHomePage/app/css/jemdoc.css
+++ b/SPAHomePage/app/css/jemdoc.css
@@ -10,7 +10,11 @@ body {
 	background: white;
 	font-family: Georgia, serif;
 	padding-bottom: 8px;
-	/*margin: 0;*/
+	margin: 0 auto;
+
+    /** overriding bootstrap 2.3.2 */
+    font-size: 16px !important;
+    line-height: 18px;
 }
 
 #layout-menu {
