--- a/PTKB/PTKB_Server/views/index.html
+++ b/PTKB/PTKB_Server/views/index.html
@@ -1,9 +1,88 @@
-<div class="page-header">
-    <h3>Admin</h3>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>Bit Maxima</title>
+    <!--<meta name="generator" content="Bootply" />-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="/lib/bootstrap24/css/bootstrap.css" rel="stylesheet">
 
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget magna et ante suscipit lacinia. Aenean porttitor velit id pretium blandit. Aenean ut sodales ante. Ut faucibus ornare venenatis. Duis sit amet arcu eros. Mauris volutpat vestibulum congue. Nam volutpat, urna eu varius dapibus, velit nisl bibendum lorem, sit amet dapibus sem dolor eu felis.</p>
+    <!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
-<p>Nulla tincidunt augue vel dolor convallis lobortis. Nunc nibh dolor, tincidunt elementum lorem id, porta imperdiet neque. Quisque egestas lacus nec magna mattis aliquam. Nunc eget orci odio. Quisque neque odio, lobortis a orci ut, tempus feugiat tortor. Quisque et tincidunt arcu. Sed vel accumsan risus. Quisque enim ipsum, luctus vitae ultrices at, vulputate eu lorem. Curabitur at nibh sagittis, lobortis odio nec, sodales velit. Aenean interdum, magna nec molestie congue, magna nisi sodales dolor, at mattis ipsum nisi at nibh. Aenean quis dictum lacus. Vivamus commodo sit amet nibh eget scelerisque. Duis consequat fringilla mollis. Sed eros risus, sodales in porttitor bibendum, vulputate ut est.</p>
+    <!-- Bit Maxima CSS code -->
+    <link href="/stylesheets/style.css" rel="stylesheet">
 
-<p>Mauris in ullamcorper sapien. Morbi imperdiet consequat luctus. Donec vestibulum dapibus libero elementum posuere. Quisque posuere ipsum turpis, nec porttitor eros lobortis vel. Proin porttitor consequat adipiscing. Proin posuere orci odio, in pellentesque elit dapibus eu. Sed aliquam mollis hendrerit. Sed quis sapien nisl. Duis a bibendum tortor, nec malesuada justo. Sed luctus lorem nec velit consequat, vel ultricies lorem pulvinar. Mauris leo sapien, fermentum vel eleifend at, cursus quis massa. Ut sit amet venenatis orci, a dictum elit. Praesent a feugiat risus, non venenatis urna. Curabitur nisi sapien, facilisis vitae scelerisque nec, lacinia vel ante. Fusce tristique justo vitae mi lacinia, non interdum erat ultrices. Proin nec tempus odio, suscipit consequat lacus.</p>
+    <!-- CSS code from Bootply.com editor -->
+    <style type="text/css">
+
+    </style>
+    <script>
+        var PagesCtrl = function ($scope){
+
+            $scope.showImg = false;
+            $scope.imgSrc = null;
+
+            $scope.show = function (){
+                //alert("mouse over!");
+                $scope.showImg = true;
+                $scope.imgSrc = "http://localhost:4000" + "/docs/28432-fnh2wi.jpg";
+            }
+
+            $scope.hide = function (){
+                //alert("mouse out!");
+                $scope.showImg = false;
+            }
+        }
+    </script>
+</head>
+
+<!-- HTML code from Bootply.com editor -->
+
+<body ng-app>
+
+<%- include top-nav.html %>
+
+<div id="wrapper">
+    <%- include left-sidebar.html %>
+
+    <div id="main-wrapper" class="col-md-21 pull-right">
+        <div id="main">
+            <div class="page-header">
+                <h3>Admin</h3>
+            </div>
+
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget magna et ante suscipit lacinia. Aenean porttitor velit id pretium blandit. Aenean ut sodales ante. Ut faucibus ornare venenatis. Duis sit amet arcu eros. Mauris volutpat vestibulum congue. Nam volutpat, urna eu varius dapibus, velit nisl bibendum lorem, sit amet dapibus sem dolor eu felis.</p>
+
+            <p>Nulla tincidunt augue vel dolor convallis lobortis. Nunc nibh dolor, tincidunt elementum lorem id, porta imperdiet neque. Quisque egestas lacus nec magna mattis aliquam. Nunc eget orci odio. Quisque neque odio, lobortis a orci ut, tempus feugiat tortor. Quisque et tincidunt arcu. Sed vel accumsan risus. Quisque enim ipsum, luctus vitae ultrices at, vulputate eu lorem. Curabitur at nibh sagittis, lobortis odio nec, sodales velit. Aenean interdum, magna nec molestie congue, magna nisi sodales dolor, at mattis ipsum nisi at nibh. Aenean quis dictum lacus. Vivamus commodo sit amet nibh eget scelerisque. Duis consequat fringilla mollis. Sed eros risus, sodales in porttitor bibendum, vulputate ut est.</p>
+
+            <p>Mauris in ullamcorper sapien. Morbi imperdiet consequat luctus. Donec vestibulum dapibus libero elementum posuere. Quisque posuere ipsum turpis, nec porttitor eros lobortis vel. Proin porttitor consequat adipiscing. Proin posuere orci odio, in pellentesque elit dapibus eu. Sed aliquam mollis hendrerit. Sed quis sapien nisl. Duis a bibendum tortor, nec malesuada justo. Sed luctus lorem nec velit consequat, vel ultricies lorem pulvinar. Mauris leo sapien, fermentum vel eleifend at, cursus quis massa. Ut sit amet venenatis orci, a dictum elit. Praesent a feugiat risus, non venenatis urna. Curabitur nisi sapien, facilisis vitae scelerisque nec, lacinia vel ante. Fusce tristique justo vitae mi lacinia, non interdum erat ultrices. Proin nec tempus odio, suscipit consequat lacus.</p>
+
+
+        </div>
+        <div ng-show="{{$scope.showImg}}" class="preview">
+            <img id ="previewImg" class="image" ng-src="http://localhost:4000/docs/28432-fnh2wi.jpg">
+        </div>
+    </div>
+
+
+</div><!-- /.container -->
+
+<script type='text/javascript' src="/lib/jquery-2.1.0.js"></script>
+<script type='text/javascript' src="/lib/bootstrap24/js/bootstrap.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
+
+<!--
+<script type='text/javascript'>
+$(document).ready(function() {
+
+});
+</script>
+-->
+</body>
+</html>
+
+
+
+
